--- a/index.html
+++ b/index.html
@@ -14,6 +14,24 @@
     <title>Fincy App</title>
   </head>
   <body>
-    
+    <div class="container">
+      <div class="navbar">
+        <div class="nav-left">
+          <img src="images/money-logo.png" class="logo"/>
+          <ul>
+            <li><a href="#" class="logo-name">Fincy App</a></li>
+            <li><a href="#">Personal</a></li>
+          </ul>
+        </div>
+        <div class="nav-right">
+          <ul>
+            <li><a href="#">Download</a></li>
+            <li><a href="#">Plans</a></li>
+            <li><a href="#">Product</a></li>
+            <button class="btn-login">Login</button>
+          </ul>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
