--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="container">
       <div class="navbar">
         <div class="nav-left">
-          <img src="images/money-logo.png" class="logo"/>
+          <img src="images/money-logo.png" class="logo-img" />
           <ul>
             <li><a href="#" class="logo-name">Fincy App</a></li>
             <li><a href="#">Personal</a></li>
@@ -30,6 +30,25 @@
             <li><a href="#">Product</a></li>
             <button class="btn-login">Login</button>
           </ul>
+        </div>
+      </div>
+      <div class="content-top">
+        <h1>
+          Send money <br />
+          abroad more faster
+        </h1>
+        <div class="send-amount">
+          <div class="amount">
+            <small>Amount</small>
+            <span>$1,000,000</span>
+          </div>
+          <div class="dollar-sign">
+            <img src="images/canada-icon.png" class="icon-cad" />
+            <span>CAD</span>
+          </div>
+          <div>
+            <button class="btn-send">Send Now</button>
+          </div>
         </div>
       </div>
     </div>
