added a footer content

--- a/index.html
+++ b/index.html
@@ -51,6 +51,23 @@
           </div>
         </div>
       </div>
+      <div class="content-bottom">
+        <div class="col-1">
+          <img src="images/shield.png" class="icon-shield">
+          <h3>Safety guarantee</h3>
+          <p>We make sure your money will be safe 100% guarantee</p>
+          <a href="#">Read more</a>
+        </div>
+        <div class="col-2">
+          <img src="images/money-icon.png" class="icon-money">
+          <h3>Send money in minutes</h3>
+          <p>Your money will be sent faster than your blue wallet</p>
+          <a href="#">Send money now</a>
+        </div>
+        <div class="col-3">
+          <img src="images/money-transfer.jpg" class="money-transfer">
+        </div>
+      </div>
     </div>
   </body>
 </html>
