added hamber button and media query

--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
             <button class="btn-login">Login</button>
           </ul>
         </div>
+
+        <button type="button" class="hamburger" id="menu-btn">
+          <span class="hamburger-top"></span>
+          <span class="hamburger-middle"></span>
+          <span class="hamburger-bottom"></span>
+        </button>
+        
       </div>
       <div class="content-top">
         <h1>
@@ -53,19 +60,19 @@
       </div>
       <div class="content-bottom">
         <div class="col-1">
-          <img src="images/shield.png" class="icon-shield">
+          <img src="images/shield.png" class="icon-shield" />
           <h3>Safety guarantee</h3>
           <p>We make sure your money will be safe 100% guarantee</p>
           <a href="#">Read more</a>
         </div>
         <div class="col-2">
-          <img src="images/money-icon.png" class="icon-money">
+          <img src="images/money-icon.png" class="icon-money" />
           <h3>Send money in minutes</h3>
           <p>Your money will be sent faster than your blue wallet</p>
           <a href="#">Send money now</a>
         </div>
         <div class="col-3">
-          <img src="images/money-transfer.jpg" class="money-transfer">
+          <img src="images/transfer.png" class="money-transfer" />
         </div>
       </div>
     </div>
