--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <li><a href="#">Download</a></li>
             <li><a href="#">Plans</a></li>
             <li><a href="#">Product</a></li>
-            <button class="btn-login">Login</button>
+            <button class="btn btn-login">Login</button>
           </ul>
         </div>
 
@@ -73,7 +73,7 @@
             <span>CAD</span>
           </div>
           <div>
-            <button class="btn-send">Send Now</button>
+            <button class="btn btn-send">Send Now</button>
           </div>
         </div>
       </div>
